This file documents the revision history for the Mod-Gearman-Worker-Go

next:
          - log max open files on startup

1.1.5    Thu Jun 10 19:57:11 CEST 2021
          - cleanup thread dump output

1.1.4    Mon Dec 14 10:49:01 CET 2020
          - improve dupserver connection handling
          - improve shutdown

1.1.3    Mon Oct 31 14:54:20 CEST 2019
          - fix null pointer exception on timeouts

1.1.2    Thu Oct 17 18:09:15 CEST 2019
          - maintainance release

1.1.1    Fri Mar 29 17:32:35 CET 2019
          - maintainance release

1.1.0    Fri Feb  1 16:20:01 CET 2019
          - improve pid file handling
          - remove pid file on panics

1.0.9    Fri Feb  1 15:21:17 CET 2019
          - fix reconnecting to gearmand
          - bail out to prevent false positives on out of memory/open files
          - remove retries for dupserver which would cause checks hanging

1.0.8    Thu Dec 20 16:44:13 CET 2018
          - fix panic when executing non-existing command without a shell

1.0.7    Tue Dec 18 17:17:30 CET 2018
          - send sigterm, then sigint and finally sigkill instead of immediate sigkill on timeout
          - do not kill child processes if the main check plugin exited ok

1.0.6    Fri Dec 14 16:29:57 CET 2018
          - improve reloading configuration
          - improve timeout handling
          - fix timeout on shutdown

1.0.5    Tue Dec  4 17:13:48 CET 2018
          - add grace period to reloads and shutdown
          - improve maintaining worker level during reload

1.0.4    Thu Nov 29 15:00:40 CET 2018
          - rework server failover handling

1.0.3    Thu Nov 15 11:42:52 CET 2018
          - fix increasing servers on sighup
          - fix returning timeout results

1.0.2    Tue Oct 30 11:36:34 CET 2018
          - fix issue with hostchecks not returned properly
          - internal improvements

1.0.1    Mon Oct 22 11:33:24 CEST 2018
          - improve ipv6 support
          - add send_gearman tool